--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,11 +1,25 @@
 .clients__list {
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
+  flex-wrap: wrap;
+  margin: -15px;
+}
+
+.clients__item {
+  width: calc((100% - 60px) / 2);
+  margin: 15px;
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 90px) / 3);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 180px) / 6);
+  }
 }
 
 .clients__link {
   @extend %centered-flex;
-  width: 170px;
+  // width: 170px;
   height: 92px;
   border: 1px solid var(--soc-icon-fill-in-team-section);
   border-radius: 4px;
