--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -18,11 +18,27 @@
 
 .features__list {
   display: flex;
+  flex-wrap: wrap;
+  @media screen and (min-width: 768px) {
+    margin: -15px;
+  }
 }
+
 .features__item {
-  width: calc((100% - 90px) / 4);
+  width: 100%;
   &:not(:last-child) {
-    margin-right: 30px;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 120px) / 4);
   }
 }
 
