--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,17 +4,32 @@
 
 .team__member-list {
   display: flex;
+  flex-wrap: wrap;
+  @media screen and (min-width: 768px) {
+    margin: -15px;
+  }
 }
 
 .team__member {
   background-color: var(--simple-white-color);
-  width: calc((100% - 90px) / 4);
+  width: 100%;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
   &:not(:last-child) {
-    margin-right: 30px;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 120px) / 4);
   }
 }
 
