--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -5,9 +5,14 @@ body {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   line-height: 1.71;
+  min-width: 320px;
 }
 
-
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
 
 .list {
   list-style: none;
