--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -14,7 +14,6 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  width: 528px;
   min-height: 581px;
   background-color: var(--simple-white-color);
   border-radius: 4px;
@@ -27,7 +26,19 @@
     transform: translate(-50%, -150%) scale(1.5);
   }
 }
+.modal {
+  @media screen and (max-width: 479px) {
+    width: 95%;
+  }
 
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
+}
 .modal__close {
   position: absolute;
   top: 8px;
