--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -3,5 +3,8 @@
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
