--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
   border-bottom: 1px solid var(--border-color-page-header);
+  position: relative;
 }
 
 .header__content {
@@ -8,16 +9,48 @@
 }
 
 .navigation__list {
+  // display: flex;
   display: flex;
+  // flex-wrap: wrap;
 }
 
 .contact {
+  // display: flex;
   display: flex;
-  margin-left: auto;
+  flex-wrap: wrap;
+  @media screen and (min-width: 1200px) {
+    margin-left: auto;
+  }
+}
+
+.contact__item:not(:last-child) {
+  @media screen and (min-width: 768px) {
+    margin-bottom: 10px;
+    margin-left: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+    margin-left: 0;
+  }
+}
+
+.contact__item:nth-child(2) {
+  margin-left: 61px;
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 0;
+  }
 }
 
 .logo--header {
-  margin-right: 93px;
+  @media screen and (min-width: 768px) {
+    margin-right: 88px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+  }
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .navigation__item:not(:last-child) {
@@ -25,16 +58,19 @@
 }
 
 .contact__item:not(:last-child) {
-  margin-right: 40px;
+  @media screen and (min-width: 1200px) {
+    margin-right: 40px;
+  }
 }
-
+.navigation__link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 .navigation__link,
 .contact__link {
   display: block;
   font-weight: 500;
   line-height: 1.14;
-  padding-top: 32px;
-  padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
@@ -67,4 +103,120 @@
 .contact__icon {
   fill: currentColor;
   margin-right: 10px;
+}
+
+// ------------------------------
+
+.menu-button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  right: 15px;
+  top: 10px;
+}
+
+.menu-container {
+  @media (max-width: 767px) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    padding: 48px 40px;
+    background-color: white;
+    z-index: 999;
+
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+
+    &.is-open {
+      transform: translateX(0);
+    }
+  }
+}
+
+.navigation {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
+
+.contacts_in_header {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (mix-width: 768px) {
+    margin-left: auto;
+  }
+}
+
+.open_mob_menu,
+.close_mob_menu {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  right: 15px;
+  top: 10px;
+}
+
+.navigation__link--current_mob {
+  color: var(--accent-color);
+  position: relative;
+}
+
+.navigation__link_mob,
+.contact__link_mob {
+  display: block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.14;
+  // padding-top: 32px;
+  // padding-bottom: 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.navigation__list_mob {
+  margin-bottom: 306px;
+}
+
+.mob-menu__social {
+  display: flex;
+  position: absolute;
+  bottom: 48px;
+  left: 40px;
+}
+
+.navigation__item_mob:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu__social-item {
+  color: var(--accent-color);
+  font-size: 18px;
+}
+
+.contact__item_mob {
+  margin-bottom: 32px;
+  color: var(--accent-color);
+}
+
+.mob-menu__social-item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.open_mob_menu,
+.menu-container {
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
