--- a/css/main.css
+++ b/css/main.css
@@ -411,6 +411,13 @@ img {
   }
 }
 
+.mob-menu__icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu__icon:hover, .mob-menu__icon:focus {
+  fill: var(--accent-color);
+}
+
 .hero {
   background-color: var(--bgc-footer-and-hero);
   text-align: center;
