--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -239,3 +239,11 @@
     display: none;
   }
 }
+
+.mob-menu__icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
+}
